Fixed navbar alignment on large screen.
On screens with more than 992px navbar is aligned to the bottom
of the header. This patch changes this behaviour to make navbar
vertically centered.

Review: https://reviews.apache.org/r/47641/

--- a/site/source/assets/css/main.css
+++ b/site/source/assets/css/main.css
@@ -128,14 +128,6 @@ img {
   background-color:#000;
 }
 
-@media (min-width: 992px) {
-  .navbar .nav li a {
-    height:120px;
-    line-height:120px;
-    padding:0 15px 0;
-  }
-}
-
 .container .logo {
 	display: block;
 	float: left;
